# hyperion

./: CMakeLists.txt  HyperionConfig.h.in
config/: hyperion.config.json.example
dependencies/: CMakeLists.txt
include/grabber/: AmlogicGrabber.h  AmlogicWrapper.h  FramebufferWrapper.h
include/hyperion/: Hyperion.h  ImageProcessor.h
libsrc/: CMakeLists.txt
libsrc/blackborder/: BlackBorderDetector.cpp  BlackBorderProcessor.cpp  CMakeLists.txt
libsrc/grabber/: CMakeLists.txt
libsrc/grabber/amlogic/: AmlogicGrabber.cpp  AmlogicWrapper.cpp  CMakeLists.txt
libsrc/grabber/framebuffer/: CMakeLists.txt  FramebufferWrapper.cpp
libsrc/hyperion/: CMakeLists.txt  Hyperion.cpp  ImageProcessor.cpp  ImageProcessorFactory.cpp  MultiColorAdjustment.cpp  MultiColorTransform.cpp  hyperion.schema.json
libsrc/leddevice/: CMakeLists.txt  LedDeviceAdalight.cpp  LedDeviceFactory.cpp  LedDeviceFile.cpp  LedRs232Device.cpp
libsrc/utils/: CMakeLists.txt  ColorArgb.cpp  ColorBgr.cpp  ColorRgb.cpp  ColorRgba.cpp  ColorRgbw.cpp  HslTransform.cpp
libsrc/xbmcvideochecker/: CMakeLists.txt
src/: CMakeLists.txt
src/hyperion-aml/: AmlogicWrapper.cpp  AmlogicWrapper.h  CMakeLists.txt  hyperion-aml.cpp
src/hyperion-framebuffer/: CMakeLists.txt  FramebufferWrapper.cpp  FramebufferWrapper.h  hyperion-framebuffer.cpp
src/hyperiond/: CMakeLists.txt  hyperiond.cpp
